# veterinary-assistant-appl

./: README.md  requirements
sih2024/: a.py  animal_health.db  app.py  db.py  disease_prediction_model.pkl  encoder_disease.pkl  encoder_symptoms.pkl  pyproject.toml  render.yaml  requirements.txt
sih2024/instance/: animal_health.db  chat.db
sih2024/templates/: analytics.html  disease_map.html  index.html  livestock_management.html  login.html  profile.html  records.html  register.html  result.html  symptoms.html  vaccination.html
